vendored_parsers/tree-sitter-objc/grammar.js
    identifier: $ => /[$a-zA-Z_](\w|\$)*/,
    
    _name: $ => field('name', $.identifier),

    //
    // Imports
    //
    class_interface: $ => choice(
      seq(
        optional($.class_interface_attribute_sepcifier),
        optional($.swift_name_attribute_sepcifier),
        repeat($.attribute_specifier),
        '@interface',
        choice(
          seq($._name, optional($.parameterized_class_type_arguments)),
          $.generics_type_reference
        ),
        optional($.superclass_reference),
        optional($.parameterized_class_type_arguments),
        $.protocol_qualifiers, // protocol_qualifiers must precede parameterized_class_type_arguments 
        optional($._instance_variables),
        optional($._interface_declaration),
        '@end',
      ),
      seq(
        optional($.class_interface_attribute_sepcifier),
        optional($.swift_name_attribute_sepcifier),
        repeat($.attribute_specifier),
        '@interface',
        choice(
          seq($._name, optional($.parameterized_class_type_arguments), optional($.protocol_qualifiers)),
          $.generics_type_reference
        ),
        optional($.superclass_reference),
        optional($._instance_variables),
        optional($._interface_declaration),
        '@end',
      ),
    ),

    category_interface: $ => seq(
      '@interface',
      choice(
        seq($._name, optional($.parameterized_class_type_arguments), optional($.protocol_qualifiers)),
        $.generics_type_reference
      ),
      '(', field('category', optional($.identifier)),')',
      optional($.protocol_qualifiers),
      optional($._instance_variables),
      optional($._interface_declaration),
      '@end',
    ),

    protocol_declaration: $ => seq(
      optional($.swift_name_attribute_sepcifier),
      optional($.attribute_specifier),
      '@protocol', $._name,
      optional($.protocol_qualifiers),
      optional($._interface_declaration),
      '@end'
    ),

    superclass_reference: $ => seq(
      ':', 
      $._name,
      field('type_reference', optional($.generic_type_references)),
    ),
    
    protocol_qualifiers: $ => seq(
      '<', commaSep1($._protocol_identifier), '>'
    ),

    _protocol_identifier: $ => prec.dynamic(5, field('name', $.identifier)),
    
    generics_type_reference: $ => seq(
      '__GENERICS',
      '(',
      seq($._name, repeat(seq(',', $._type_specifier))),
      ')',
    ),

    _instance_variables: $ => seq(
      '{', repeat($._instance_variable_declaration) ,'}'
    ),

    _interface_declaration: $ => repeat1(
      choice(
        $._ns_assume_nonnull_declaration,
        $._interface_declaration_specifier,
        $.declaration,
        $.method_declaration,
        $.property_declaration,
        $._empty_declaration,
        $.type_definition,
        $.preproc_def,
        $.preproc_function_def,
      )
    ),

    method_declaration: $ => seq(
      field('scope', $._class_member_scope),
      field('return_type', optional($._method_argument_type_specifier)),
      field('selector', $._method_selector),
      repeat(choice(
        $.attribute_specifier,
        $.swift_name_attribute_sepcifier,
      )),
      ';'
    ),

    _class_member_scope: $ => choice(
      $.class_scope,
      $.instance_scope
    ),

    class_scope: $ => '+',

    instance_scope: $ => '-',

    storage_class_specifier: ($, superclass) => choice(
      superclass,
      /FOUNDATION_EXPORT|FOUNDATION_EXTERN|FOUNDATION_STATIC_INLINE|NS_INLINE|UIKIT_EXTERN|CG_EXTERN|CG_INLINE/
    ),

    property_declaration: $ => seq(
      '@property',
      optional($.property_attributes),
      seq(
        optional($.attribute_specifier),
        repeat($.type_qualifier),
        field('type', $._type_specifier),
        optional($.attribute_specifier),
        repeat($.type_qualifier),
        commaSep1(field('declarator', $._declarator)),
      ),
      repeat($.attribute_specifier),
      optional($.swift_name_attribute_sepcifier),
      ';'
    ),

    property_attributes: $ => seq(
      '(', commaSep($._property_attribute), ')'
    ),

    _property_attribute: $ => choice(
      $.getter,
      $.setter,
      $.nonnull,
      $.nullable,
      $.null_resettable,
      $.unsafe_unretained,
      $.null_unspecified,
      $.direct,
      $.readwrite,
      $.readonly,
      $.strong,
      $.weak,
      $.copy,
      $.assign,
      $.retain,
      $.atomic,
      $.nonatomic,
      $.class,
      $.NS_NONATOMIC_IOSONLY,
      $.DISPATCH_QUEUE_REFERENCE_TYPE,
    ),
    
    attribute_specifier: ($, superclass) => prec.dynamic(1, prec.left(choice(
      seq(
        choice('__attribute', '__attribute__'),
        '(',
        $.argument_list,
        ')'
      ),
      $.method_attribute_specifier,
      $.method_variadic_arguments_attribute_specifier,
      $.availability_attribute_specifier,
    ))),

    method_attribute_specifier: $ => token.immediate(/NS_DESIGNATED_INITIALIZER|NS_REQUIRES_SUPER|CF_RETURNS_RETAINED|CF_RETURNS_NOT_RETAINED|NS_REQUIRES_NIL_TERMINATION|NS_DIRECT/),
    
    method_variadic_arguments_attribute_specifier: $=> seq(
      choice('NS_FORMAT_FUNCTION', 'CF_FORMAT_FUNCTION'),
      '(',
      $.number_literal,
      ',',
      $.number_literal,
      ')'
    ),

    availability_attribute_specifier: $ => prec(1, choice(
      'NS_UNAVAILABLE',
      'DEPRECATED_ATTRIBUTE',
      'UI_APPEARANCE_SELECTOR',
      'UNAVAILABLE_ATTRIBUTE',
      seq(
        choice('NS_AVAILABLE', '__IOS_AVAILABLE', 'NS_AVAILABLE_IOS', 
          'API_AVAILABLE', 'API_UNAVAILABLE', 'API_DEPRECATED', 
          'NS_ENUM_AVAILABLE_IOS', 'NS_DEPRECATED_IOS', 'NS_ENUM_DEPRECATED_IOS', 
          'DEPRECATED_MSG_ATTRIBUTE', '__deprecated_msg', '__deprecated_enum_msg', 
          'NS_SWIFT_UNAVAILABLE', 'NS_EXTENSION_UNAVAILABLE_IOS', 'NS_CLASS_AVAILABLE_IOS', 'NS_CLASS_DEPRECATED_IOS'),
        '(',
        commaSep1(choice(field('message', $.string_literal), $.platform_version)),
        ')'
      ),
    )),
    
    platform_version: $ => choice(
      field('version', /\d+_\d+/), // 8_0
      field('version', $.number_literal), // 11.0
      field('platform', $.platform), // ios, macos, tvos
      seq(
        field('platform', $.platform),
        '(',
        field('version', commaSep1(choice(
          /\d+_\d+/, // 8_0
          $.number_literal, // 11.0
          $.identifier, // API_TO_BE_DEPRECATED macro
        ))),
        ')'
      )
    ),
    
    platform: $ => choice(
      'ios', 'tvos', 'macos', 'macosx', 'watchos'
    ),

    swift_name_attribute_sepcifier: $ => choice(
      'NS_REFINED_FOR_SWIFT',
      seq(
        'NS_SWIFT_NAME',
        '(',
        field('class', optional($.identifier)),
        field('method', $.identifier),
        field('parameters', optional(seq(
          '(',
          repeat(
            seq(repeat($._type_specifier), ':'),
          ),
          ')',
        ))),
        ')'
      ),
    ),

    nullable: $ => 'nullable',

    readonly: $ => 'readonly',

    strong: $ => 'strong',

    nonatomic: $ => 'nonatomic',

    class_implementation: $ => seq(
      optional($.attribute_specifier),
      '@implementation', $._name, optional($.superclass_reference), optional('NS_UNAVAILABLE'),
      optional($._instance_variables),
      optional($._implementation_definition),
      '@end'
    ),

    category_implementation: $ => seq(
      optional($.attribute_specifier),
      '@implementation', $._name, '(', field('category', $.identifier),')',
      optional($._implementation_definition),
      '@end'
    ),

    _implementation_definition: $ => repeat1(
      choice(
        $._ns_assume_nonnull_declaration,
        $.function_definition,
        $.declaration,
        $.synthesize_definition,
        $.dynamic_definition,
        $.method_definition,
        $.type_definition,
        $.preproc_def,
        $.preproc_function_def,
      )
    ),

    method_definition: $ => seq(
      field('scope', $._class_member_scope),
      field('return_type', optional($._method_argument_type_specifier)),
      field('selector', $._method_selector),
      optional($.attribute_specifier),
      optional(';'), // compatible with: - (void)method; {}
      field('body', $.compound_statement),
      optional(';'),
    ),

    _method_selector: $ => choice(
      $._unary_selector,
      seq(
        $.keyword_selector,
        optional(seq(',', '...')),
      ),
    ),

    keyword_selector: $ => repeat1($.keyword_declarator),

    keyword_declarator: $ => prec.right(seq(
      field('keyword', optional($.identifier)),
      ':',
      field('type', optional($._method_argument_type_specifier)),
      $._name,
      optional('__unused')
    )),
    
    _method_argument_type_specifier: $ => prec(1, seq(
      '(',
        $._argument_type_declarator,
      ')',
      optional($.attribute_specifier),
    )),
    
    type_definition: ($, superclass) => prec(1, seq(
      optional($.attribute_specifier),
      optional($.swift_name_attribute_sepcifier),
      'typedef',
      choice(
        seq(
          optional($.attribute_specifier),
          repeat($.type_qualifier),
          field('type', $._type_specifier),
          optional($.attribute_specifier),
          repeat($.type_qualifier),
          field('declarator', $._type_declarator),
          ), 
        seq(
          optional($.attribute_specifier),
          repeat($.type_qualifier),
          field('type', $.ns_enum_specifier),
          optional($.attribute_specifier),
          repeat($.type_qualifier),
          field('declarator', optional($._type_declarator)), // NS_ENUM optional
        )
      ),
      field('attributes', optional(choice($.identifier, $.attribute_specifier))),
      ';'
    )),
    
    _type_declarator: ($, superclass) => choice(
      superclass,
      $.block_declarator,
    ),
    
    _type_specifier: ($, superclass) => choice(
      superclass,
      $.id,
      $.SEL,
      $.IMP,
      $.Class,
      $.BOOL,
      $.auto,
      $.instancetype,
      $.ns_enum_specifier,
      $.typeof_specifier,
      $.atomic_specifier,
      $.generic_type_specifier,
    ),

    generic_type_specifier: $ => prec.dynamic(1, choice(
      seq(
        field('class_name', choice($._type_identifier, $.id, $.Class)),
        field('type_reference', repeat1(choice($.protocol_qualifiers, $.generic_type_references))),
      )
    )),

    generic_type_references: $ => seq(
      '<', commaSep1($.type_descriptor), '>'
    ),

    type_qualifier: ($, superclass) => choice(
      superclass,
      'in',
      'out',
      'inout',
      'bycopy',
      'byref',
      'oneway',
      '_Nullable',
      '_Nonnull',
      '_Nullable_result',
      '_Null_unspecified',
      '__autoreleasing',
      '__nullable',
      '__nonnull',
      '__strong',
      '__weak',
      '__bridge',
      '__bridge_transfer',
      '__bridge_retained',
      '__unsafe_unretained',
      '__block',
      '__kindof',
      '__unused',
      '_Complex',
      '__complex',
      'IBOutlet',
      'IBInspectable',
      'NS_VALID_UNTIL_END_OF_SCOPE',
    ),

    //
    // Block
    // https://opensource.apple.com/source/clang/clang-703.0.31/src/tools/clang/docs/BlockLanguageSpec.rst.auto.html
    // How Do I Declare A Block in Objective-C?
    // https://stackoverflow.com/questions/9201514/block-declaration-syntax-list
    /**
      As a local variable:
      returnType (^blockName)(parameterTypes) = ^returnType(parameters) {...};

      As a property:
      @property (nonatomic, copy, nullability) returnType (^blockName)(parameterTypes);

      As a method parameter:
      - (void)someMethodThatTakesABlock:(returnType (^nullability)(parameterTypes))blockName;

      As an argument to a method call:
      [someObject someMethodThatTakesABlock:^returnType (parameters) {...}];

      As a parameter to a C function:
      void SomeFunctionThatTakesABlock(returnType (^blockName)(parameterTypes));

      As a typedef:
      typedef returnType (^TypeName)(parameterTypes);
      TypeName blockName = ^returnType(parameters) {...};

      As a cast type specifier:
      (returnType (^)(parameterTypes))anotherBlock;
    **/

    declaration: $ => seq(
      optional($.swift_name_attribute_sepcifier),
      $._declaration_specifiers,
      commaSep1(field('declarator', choice(
        $._declarator,
        $.init_declarator
      ))),
      optional($.attribute_specifier),
      optional($.type_qualifier),
      ';'
    ),
    
    _declarator: ($, superclass) => choice(
      superclass,
      $.block_declarator,
    ),
    
    block_abstract_declarator: $ => seq(
      '(',
      optional('NS_NOESCAPE'),
      optional($.type_qualifier),
      '^',
      optional($.type_qualifier),
      ')',
      field('parameters', $.parameter_list),
    ),

    block_declarator: $ => seq(
      '(',
      '^',
      choice(
        seq(
          repeat($.type_qualifier),
          field('declarator', $.identifier),
          repeat($.type_qualifier),
        ),
        field('return_type', $.block_declarator),
      ),
      ')',
      field('parameters', $.parameter_list),
    ),

    nil: $ => 'nil',

    id: $ => 'id',
    
    instancetype: $ => 'instancetype',

    _expression: ($, superclass) => choice(
      superclass,
      $.self,
      $.super,
      $.nil,
      $.YES,
      $.NO,
      $.message_expression,
      $.selector_expression,
      $.protocol_expression,
      $.encode_expression,
      $.number_expression,
      $.string_expression,
      $.object_expression,
      $.dictionary_expression,
      $.array_expression,
      $.boolean_expression,
      $.block_expression,
      $.available_expression,
      $.statement_expression,
      $.va_arg_expression,
    ),

    string_expression: $ => seq(
      seq('@', alias($.string_literal, 'string_literal')),
      repeat(seq(optional('@'), alias($.string_literal, 'string_literal'))),
    ),

    cast_expression: $ => prec(C.PREC.CAST, seq(
      '(',
      field('type', choice($.type_descriptor, $.block_abstract_declarator)),
      ')',
      field('value', $._expression)
    )),

    //
    // Lexical Structure
    // /#[ \t]*(import|include|pragma|if|elif|else|endif|define|undef|line|warning|error)[^\r\n]*\r?\n/
    //
